[project]
name = "system-tools"
version = "0.1.0"
description = "A plugin that provides System Tools functionality for reading, writing, executing files, working with folders"
authors = [
    { name = "Luke Hinds (Red Dot Rocket)", email = "your.email@example.com" }
]
dependencies = [
    "agentup>=0.1.0",
    "pluggy>=1.5.0",
]

[project.entry-points."agentup.skills"]
system_tools = "system_tools.plugin:Plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
