[project]
name = "sys-tools"
version = "0.3.0"
description = "A plugin that provides System Tools for AgentUp"
authors = [
    { name = "Luke Hinds (Red Dot Rocket)", email = "luke@rdrocket.com" }
]
requires-python = ">=3.11"
dependencies = [
    "agentup>=0.3.0",
    "build>=1.2.2.post1",
    "pluggy>=1.5.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "mypy>=1.0.0",
]

[project.entry-points."agentup.capabilities"]
sys_tools = "sys_tools.plugin:Plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sys_tools"]

# Include static files in the wheel
[tool.hatch.build.targets.wheel.force-include]
"static" = "static"

[tool.pytest.ini_options]
asyncio_mode = "auto"
